# lua-cmake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: tests.yml
test/: CMakeLists.txt
test/src/c/: IncludeTests.c
